ajout du message d'utilisation du .jar